; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssh/extr_scp.c_append.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssh/extr_scp.c_append.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8***, i64*)* @append to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @append(i8* %0, i8*** %1, i64* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8***, align 8
  %7 = alloca i64*, align 8
  %8 = alloca i8**, align 8
  store i8* %0, i8** %5, align 8
  store i8*** %1, i8**** %6, align 8
  store i64* %2, i64** %7, align 8
  %9 = load i8***, i8**** %6, align 8
  %10 = load i8**, i8*** %9, align 8
  %11 = load i64*, i64** %7, align 8
  %12 = load i64, i64* %11, align 8
  %13 = add i64 %12, 1
  %14 = call i8** @reallocarray(i8** %10, i64 %13, i32 8)
  store i8** %14, i8*** %8, align 8
  %15 = icmp eq i8** %14, null
  br i1 %15, label %16, label %17

16:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %28

17:                                               ; preds = %3
  %18 = load i8*, i8** %5, align 8
  %19 = load i8**, i8*** %8, align 8
  %20 = load i64*, i64** %7, align 8
  %21 = load i64, i64* %20, align 8
  %22 = getelementptr inbounds i8*, i8** %19, i64 %21
  store i8* %18, i8** %22, align 8
  %23 = load i64*, i64** %7, align 8
  %24 = load i64, i64* %23, align 8
  %25 = add i64 %24, 1
  store i64 %25, i64* %23, align 8
  %26 = load i8**, i8*** %8, align 8
  %27 = load i8***, i8**** %6, align 8
  store i8** %26, i8*** %27, align 8
  store i32 0, i32* %4, align 4
  br label %28

28:                                               ; preds = %17, %16
  %29 = load i32, i32* %4, align 4
  ret i32 %29
}

declare dso_local i8** @reallocarray(i8**, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
